# ha-value-crossing

./: .gitignore  README.md  conftest.py  hacs.json  pyproject.toml
brands/: README.md
custom_components/value_crossing/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  estimation.py  icons.json  kinds.py  manifest.json  sensor.py  strings.json
custom_components/value_crossing/translations/: de.json  en.json
scripts/: release.sh
tests/: conftest.py  test_config_flow.py  test_estimation.py  test_init.py  test_kinds.py  test_translations.py
