[project]
name = "ha-value-crossing"
version = "0.0.1"
description = "Home Assistant helper integration: value-crossing time estimation"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Async + custom-integration loading for the HA-aware tests (run under .venv-ha).
# The pure ARCH-01 tests ignore these. asyncio_mode requires pytest-asyncio
# (pulled in by pytest-homeassistant-custom-component).
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
